--- a/.github/workflows/main_dev-rj-demo.yml
+++ b/.github/workflows/main_dev-rj-demo.yml
@@ -53,7 +53,7 @@ jobs:
           
       - name: unzip artifact for deployment
         run: |
-           Expand-Archive -Path release.zip
+           Expand-Archive release.zip
            rm release.zip
                            #unzip release.zip
           
